--- a/src/notes/javascript/16.md
+++ b/src/notes/javascript/16.md
@@ -1,6 +1,6 @@
 :::snippet DOM 变化
 
-1. XML 命名空间
+1. `XML` 命名空间。
 
 ```html
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -20,7 +20,7 @@
 </html>
 ```
 
-2. 针对命名空间也提供了各种指定命名空间对应的方法
+2. 针对命名空间也提供了各种指定命名空间对应的方法。
 
 ```javascript
 //创建一个新的SVG 元素
@@ -28,14 +28,17 @@ var svg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
 //创建一个属于某个命名空间的新特性
 var att = document.createAttributeNS("http://www.somewhere.com", "random");
 //取得所有XHTML 元素
-var elems = document.getElementsByTagNameNS("http://www.w3.org/1999/xhtml", "*");
+var elems = document.getElementsByTagNameNS(
+  "http://www.w3.org/1999/xhtml",
+  "*"
+);
 ```
 
 :::
 
 :::snippet 元素样式
 
-1. `style` 属性操作和获取样式
+1. `style` 属性操作和获取样式。
 
 ```javascript
 var myDiv = document.getElementById("myDiv");
@@ -52,7 +55,7 @@ alert(myDiv.style.width); //"100px"
 alert(myDiv.style.height); //"200px"
 ```
 
-2. 获取元素的所有样式
+2. 获取元素的所有样式。
 
 ```javascript
 function getStyleCss() {
@@ -63,7 +66,7 @@ function getStyleCss() {
 }
 ```
 
-3. 操作样式表，获取样式表根据提供的属性对样式表进行设置
+3. 操作样式表，获取样式表根据提供的属性对样式表进行设置。
 
 ```javascript
 function getStyleSheet(element) {
@@ -74,16 +77,16 @@ var link = document.getElementsByTagName("link")[0];
 var sheet = getStylesheet(link);
 ```
 
-4. css 规则：设置 css 解析取值等规则实际开发几乎不会用
+4. `css` 规则：设置 `css` 解析取值等规则实际开发几乎不会用
 
 :::
 
 :::snippet 元素偏移量
 
-1. offsetHeight：元素在垂直方向上占用的空间大小，以像素计。包括元素的高度、（可见的）水平滚动条的高度、上边框高度和下边框高度。
-2. offsetWidth：元素在水平方向上占用的空间大小，以像素计。包括元素的宽度、（可见的）垂直滚动条的宽度、左边框宽度和右边框宽度。
-3. offsetLeft：元素的左外边框至包含元素的左内边框之间的像素距离。
-4. offsetTop：元素的上外边框至包含元素的上内边框之间的像素距离。
+1. `offsetHeight` ：元素在垂直方向上占用的空间大小，以像素计。包括元素的高度、（可见的）水平滚动条的高度、上边框高度和下边框高度。
+2. `offsetWidth` ：元素在水平方向上占用的空间大小，以像素计。包括元素的宽度、（可见的）垂直滚动条的宽度、左边框宽度和右边框宽度。
+3. `offsetLeft` ：元素的左外边框至包含元素的左内边框之间的像素距离。
+4. `offsetTop` ：元素的上外边框至包含元素的上内边框之间的像素距离。
 
 ![元素偏移量](../../assets/images/javascript-16-01.png)
 
@@ -113,10 +116,10 @@ function getViewport() {
 
 :::snippet 滚动大小
 
-1. scrollHeight：在没有滚动条的情况下，元素内容的总高度。
-2. scrollWidth：在没有滚动条的情况下，元素内容的总宽度。
-3. scrollLeft：被隐藏在内容区域左侧的像素数。通过设置这个属性可以改变元素的滚动位置。
-4. scrollTop：被隐藏在内容区域上方的像素数。通过设置这个属性可以改变元素的滚动位置。
+1. `scrollHeight` ：在没有滚动条的情况下，元素内容的总高度。
+2. `scrollWidth` ：在没有滚动条的情况下，元素内容的总宽度。
+3. `scrollLeft` ：被隐藏在内容区域左侧的像素数。通过设置这个属性可以改变元素的滚动位置。
+4. `scrollTop` ：被隐藏在内容区域上方的像素数。通过设置这个属性可以改变元素的滚动位置。
 
 ![滚动大小](../../assets/images/javascript-16-03.png)
 
@@ -125,7 +128,10 @@ var docHeight = Math.max(
   document.documentElement.scrollHeight,
   document.documentElement.clientHeight
 );
-var docWidth = Math.max(document.documentElement.scrollWidth, document.documentElement.clientWidth);
+var docWidth = Math.max(
+  document.documentElement.scrollWidth,
+  document.documentElement.clientWidth
+);
 ```
 
 :::
@@ -164,7 +170,7 @@ function getBoundingClientRect(element) {
 
 :::snippet NodeIterator 遍历
 
-1. document.createNodeIterator() 创建 NodeIterator
+1. `document.createNodeIterator()` 创建 `NodeIterator`
 
 | 参数                     | 描述                                                                   |
 | :----------------------- | :--------------------------------------------------------------------- |
@@ -173,7 +179,7 @@ function getBoundingClientRect(element) {
 | filter                   | 是一个 NodeFilter 对象，或者一个表示应该接受还是拒绝某种特定节点的函数 |
 | entityReferenceExpansion | 布尔值，HTML 页面中没有用，不能扩展                                    |
 
-2. whatToShow 指定过滤类型的参数
+2. `whatToShow` 指定过滤类型的参数
 
 | 类型                                                                         | 描述                                                  |
 | :--------------------------------------------------------------------------- | :---------------------------------------------------- |
@@ -191,17 +197,22 @@ function getBoundingClientRect(element) {
 | NodeFilter.SHOW_DOCUMENT_FRAGMENT                                            | 显示文档片段节点。对 HTML 页面没有用                  |
 | NodeFilter.SHOW_NOTATION                                                     | 显示符号节点。对 HTML 页面没有用                      |
 
-3. 过滤满足多个条件的节点
+3. 过滤满足多个条件的节点。
 
 ```javascript
 var whatToShow = NodeFilter.SHOW_ELEMENT | NodeFilter.SHOW_TEXT;
 ```
 
-4. 遍历节点
+4. 遍历节点。
 
 ```javascript
 var div = document.getElementById("div1");
-var iterator = document.createNodeIterator(div, NodeFilter.SHOW_ELEMENT, null, false);
+var iterator = document.createNodeIterator(
+  div,
+  NodeFilter.SHOW_ELEMENT,
+  null,
+  false
+);
 var node = iterator.nextNode(); //上一个节点可以使用 previousNode()
 while (node !== null) {
   alert(node.tagName); //输出标签名
@@ -213,7 +224,7 @@ while (node !== null) {
 
 :::snippet TreeWalker 遍历
 
-1. TreeWalker 方法
+1. `TreeWalker` 方法
 
 | 方法              | 描述                           |
 | :---------------- | :----------------------------- |
@@ -228,17 +239,24 @@ while (node !== null) {
 ```javascript
 var div = document.getElementById("div1");
 var filter = function(node) {
-  return node.tagName.toLowerCase() == "li" ? NodeFilter.FILTER_ACCEPT : NodeFilter.FILTER_SKIP;
+  return node.tagName.toLowerCase() == "li"
+    ? NodeFilter.FILTER_ACCEPT
+    : NodeFilter.FILTER_SKIP;
 };
-var walker = document.createTreeWalker(div, NodeFilter.SHOW_ELEMENT, filter, false);
-var node = iterator.nextNode();
+var walker = document.createTreeWalker(
+  div,
+  NodeFilter.SHOW_ELEMENT,
+  filter,
+  false
+);
+var node = walker.nextNode();
 while (node !== null) {
   alert(node.tagName); //输出标签名
-  node = iterator.nextNode();
+  node = walker.nextNode();
 }
 ```
 
-2. currentNode 重新设置遍历的当前节点
+2. `currentNode` 重新设置遍历的当前节点
 
 ```javascript
 var node = walker.nextNode();
@@ -250,9 +268,9 @@ walker.currentNode = document.body; //修改起点
 
 :::snippet 范围
 
-1. 范围是选择 DOM 结构中特定部分，然后再执行相应操作的一种手段
+1. 范围是选择 `DOM` 结构中特定部分，然后再执行相应操作的一种手段。
 
-2. 常用 selectNode 和 selectNodeContents 选中指定范围
+2. 常用 `selectNode` 和 `selectNodeContents` 选中指定范围。
 
 ```javascript
 var range1 = document.createRange();
@@ -262,9 +280,9 @@ range1.selectNode(p1);
 range2.selectNodeContents(p1);
 ```
 
-3. IE8 及更早版本不支持“DOM2 级遍历和范围”模块，但它提供了一个专有的文本范围对象，可
-   以用来完成简单的基于文本的范围操作。IE9 完全支持 DOM 遍历
+3. IE8 及更早版本不支持 `DOM2` 级遍历和范围”模块，但它提供了一个专有的文本范围对象，可
+   以用来完成简单的基于文本的范围操作。IE9 完全支持 DOM 遍历。
 
-4. 更多详细内容复杂操作参照对应的文档
+4. 更多详细内容复杂操作参照对应的文档。
 
 :::
