--- a/src/notes/vue/02.md
+++ b/src/notes/vue/02.md
@@ -1,79 +1,376 @@
-:::snippet 代码示例
+:::snippet 文档示例
 
-1. 代码示例效果
+1. 代码示例
 
 ![代码示例](../../assets/images/vue-02-01.png)
 
-2. 通过 Markdown 编写示例文档
+2. 详细代码
 
-![示例文档](../../assets/images/vue-02-02.png)
+![详细代码](../../assets/images/vue-02-02.png)
 
-3. 功能实现
+3. markdown 文件
 
-（1）自定义 webpack 加载器来解析 markdown 文件
-
-（2）markdown-it 来解析 markdown 内容
-
-（3）markdown-it-container 解析自定义`:::snippet :::`为 vue 组件代码
-
-（4）@vue/component-compiler-utils 编译 markdown 的 vue 代码
-
-（5）拼接成一个 vue 单组件格式`template`、`script`、`style`字符串，再用`vue-loader`加载
+![代码文档](../../assets/images/vue-02-03.png)
 
 :::
 
-:::snippet Markdown 解析生成 Vue 格式
+:::snippet demo 示例组件 kv-code-snippet
 
-1. markdown-it 解析 markdown 内容，markdown-it-container 解析`:::snippet :::` 格式内容,highlight 代码高亮
+示例展示：代码运行示例、功能描述、详细代码展示
+
+```html
+<template>
+  <div class="kv-code-snippet">
+    <div class="kv-code-snippet--demo">
+      <slot name="source"></slot>
+    </div>
+    <div class="kv-code-snippet--desc">
+      <slot name="desc"></slot>
+      <span class="kv-code-snippet--icon-code" @click="showCode = !showCode">
+        <img v-if="showCode" src="../assets/code-open.svg" />
+        <img v-else src="../assets/code-close.svg" />
+      </span>
+    </div>
+    <div v-show="showCode" class="kv-code-snippet--code">
+      <slot name="code"></slot>
+    </div>
+  </div>
+</template>
+
+<script>
+  export default {
+    data() {
+      return {
+        showCode: false
+      };
+    }
+  };
+</script>
+
+<style>
+  .kv-code-snippet {
+    position: relative;
+    box-sizing: border-box;
+    width: 100%;
+    margin: 0 0 16px;
+    border-radius: 5px;
+    transition: all 0.2s;
+    box-shadow: 0 6px 12px -2px rgba(0, 32, 128, 0.1), 0 0 0 1px #f0f2f7;
+    background-color: #ffffff;
+    text-align: left;
+  }
+  .kv-code-snippet--demo {
+    box-sizing: border-box;
+    padding: 30px 35px;
+    color: #333333;
+    border-bottom: 1px solid #ebedf0;
+  }
+  .kv-code-snippet--desc {
+    position: relative;
+    box-sizing: border-box;
+    width: 100%;
+    min-height: 44px;
+    padding: 12px 50px 12px 20px;
+    font-size: 14px;
+    transition: background-color 0.4s;
+  }
+
+  .kv-code-snippet--icon-code {
+    position: absolute;
+    right: 16px;
+    bottom: 13px;
+    cursor: pointer;
+    width: 18px;
+    height: 18px;
+    line-height: 18px;
+    text-align: center;
+  }
+
+  .kv-code-snippet--icon-code img {
+    transition: all 0.4s;
+    user-select: none;
+    position: absolute;
+    left: 0;
+    top: 0;
+    margin: 0;
+    max-width: 100%;
+    width: 100%;
+    vertical-align: baseline;
+    box-shadow: none;
+  }
+
+  .kv-code-snippet--code {
+    box-sizing: border-box;
+    border-top: 1px solid #ebedf0;
+  }
+
+  .kv-code-snippet--code code {
+    background-color: #f5f7fb;
+    font-family: Consolas, Menlo, Courier, monospace;
+    border: none;
+    display: block;
+    font-size: 14px;
+    padding: 16px 32px;
+    line-height: 1.5;
+  }
+  .kv-code-snippet--code .hljs {
+    padding: 0;
+    margin: 0;
+  }
+</style>
+```
+
+> 组件设置设置插槽：source 代码运行效果、desc 内容描述、code 高亮显示代码
+
+:::
+
+:::snippet webpack 加载器 markdown-loader
+
+1. 解析 markdown 为 html 使用 markdown-it 和 markdown-it-container
 
 ```bash
 npm install markdown-it --save-dev
 npm install markdown-it-container --save-dev
+```
+
+2. 代码高亮显示使用 highlight.js
+
+```bash
 npm install highlight.js --save-dev
 ```
 
-2. 代码示例组件 kv-vue-snippet
+3. markdown-loader 加载器
 
 ```javascript
-var value = "kv-vue-snippet";
+const MarkdownIt = require("markdown-it");
+const MarkdownItContainer = require("markdown-it-container");
+const VueTemplateComplier = require("vue-template-compiler");
+const hljs = require("highlight.js");
+const { parse, compileTemplate } = require("@vue/component-compiler-utils");
+
+module.exports = function(source) {
+  // 需要解析成vue代码块集合
+  const componentCodeList = [];
+  let styleCodeList = [];
+  // 初始还MarkdownIt用于转换md文件为html
+  const markdownIt = MarkdownIt({
+    // 将markdown中的代码块用hljs高亮显示
+    highlight: function(str, lang) {
+      if (lang && hljs.getLanguage(lang)) {
+        return `<pre class="hljs"><code>${
+          hljs.highlight(lang, str, true).value
+        }</code></pre>`;
+      }
+      return `<pre class="hljs"><code>${markdownIt.utils.escapeHtml(
+        str
+      )}</code></pre>`;
+    }
+  });
+  // 使用【markdown-it-container】插件解析【:::snippet :::】代码块为vue渲染
+  markdownIt.use(MarkdownItContainer, "snippet", {
+    // 验证代码块为【:::snippet :::】才进行渲染
+    validate(params) {
+      return params.trim().match(/^snippet\s*(.*)$/);
+    },
+    // 代码块渲染
+    render(tokens, index) {
+      const token = tokens[index];
+      const tokenInfo = token.info.trim().match(/^snippet\s*(.*)$/);
+      if (token.nesting === 1) {
+        // 获取snippet第一行的表述内容
+        const desc = tokenInfo && tokenInfo.length > 1 ? tokenInfo[1] : "";
+        // 获取vue组件示例的代码
+        const nextIndex = tokens[index + 1];
+        const content = nextIndex.type === "fence" ? nextIndex.content : "";
+        // 将content解析为vue组件基本属性对象;
+        let { template, script, styles } = parse({
+          source: content,
+          compiler: VueTemplateComplier,
+          needMap: false
+        });
+        styleCodeList = styleCodeList.concat(styles);
+        // 将template的转为render函数
+        const { code } = compileTemplate({
+          source: template.content,
+          compiler: VueTemplateComplier
+        });
+        // 获取script的代码
+        script = script ? script.content : "";
+        if (script) {
+          script = script.replace(
+            /export\s+default/,
+            "const exportJavaScript ="
+          );
+        } else {
+          script = "const exportJavaScript = {} ;";
+        }
+        // 代码块解析将需要解析vue组件的存储，渲染html用组件名称替代
+        const name = `kv-snippent-${componentCodeList.length}`;
+        // 渲染组件代码添加到数据集合
+        componentCodeList.push(`"${name}":(function () {
+          ${code}
+          ${script}
+           return {
+             ...exportJavaScript,
+             render,
+             staticRenderFns
+          }
+        })()`);
+        // 将需要渲染的示例用kv-code-snippet组件包裹替换插槽显示示例效果
+        return `<kv-code-snippet>
+                  <div slot="desc">${markdownIt.render(desc)}</div>
+                  <${name} slot="source" />
+                  <div slot="code">`;
+      }
+      return `    </div>
+                </kv-code-snippet> `;
+    }
+  });
+  // 将所有转换好的代码字符串拼接成vue单组件template、script、style格式
+  return `
+        <template>
+          <div class="kv-snippet-doc">
+            ${markdownIt.render(source)}
+          </div>
+        </template>
+        <script>
+           export default {
+           name: 'kv-component-doc',
+           components: {
+            ${componentCodeList.join(",")}
+           }
+         }
+       </script>
+       <style>
+         ${Array.from(styleCodeList, m => m.content).join("\n")}
+       </style>`;
+};
 ```
 
-3. markdown-laoder.js 加载器
+4. 加载器编译过程
+
+（1）markdown-it 来解析 markdown 内容
+
+（2）markdown-it-container 解析自定义`:::snippet :::`为 vue 组件代码
+
+（3）`:::snippet :::`代码块中的 html 代码编译为 vue 可执行代码字符串
+
+（4）@vue/component-compiler-utils 将 template 模板编译成 render 函数
+
+（5）所有的代码块`:::snippet :::`都编译拼接对应的单个组件自执行函数返回 vue component
+
+（6）markdown 文件直接编译的 html 作为新的 vue 组件 template
+
+（7）将 vue component 的组件集合拼接到 vue 组件 script 标签中的 compoenent
+
+（8）将各个组件的 style 拼接到 vue 组件的 style
+
+（9）template、script、style 组合成单组件格式的字符串，在配置 vue-loader 来加载解析
+
+5. vue.config.js 加载器配置解析
 
 ```javascript
-var value = "markdown-laoder.js";
+module.exports = {
+  publicPath: "kv-web-components",
+  chainWebpack: config => {
+    config.module
+      .rule("md")
+      .test(/\.md/)
+      .use("vue-loader")
+      .loader("vue-loader")
+      .end()
+      .use("markdown-loader")
+      .loader(
+        require("path").resolve(__dirname, "./webpack/markdown-loader.js")
+      )
+      .end();
+  }
+};
 ```
 
-3. vue.config.js
+:::
+
+:::snippet 示例配置
+
+1. 修改 HeloWorld.vue 组件便于测试
+
+```html
+<template>
+  <div class="hello">
+    <h1>{{ msg }}</h1>
+  </div>
+</template>
+
+<script>
+  export default {
+    name: "HelloWorld",
+    props: {
+      msg: String
+    }
+  };
+</script>
+```
+
+2. 代码示例文档 HeloWorldDoc.md
+
+![HeloWorldDoc.md](../../assets/images/vue-02-03.png)
+
+3. main.js 全局注册和样式引用
 
 ```javascript
-var value = "vue.config.js";
+import Vue from "vue";
+import App from "./App.vue";
+import KvCodeSnippet from "./components/code-snippet";
+import KvHelloWorld from "./components/HelloWorld";
+import "highlight.js/styles/color-brewer.css";
+
+Vue.config.productionTip = false;
+Vue.component("kv-code-snippet", KvCodeSnippet);
+Vue.component("kv-hello-world", KvHelloWorld);
+
+new Vue({
+  render: h => h(App)
+}).$mount("#app");
 ```
 
-4. 修改 HelloWord
+4. app.vue 引用 HeloWorldDoc.md
 
-```javascript
-var value = "vue.config.js";
+```html
+<template>
+  <div id="app">
+    <img alt="Vue logo" src="./assets/logo.png" />
+    <kv-hello-world-doc></kv-hello-world-doc>
+  </div>
+</template>
+
+<script>
+  import KvHelloWorld from "./components/HelloWorld";
+  import KvHelloWorldDoc from "./components/HelloWorldDoc.md";
+
+  export default {
+    name: "app",
+    components: {
+      KvHelloWorld,
+      KvHelloWorldDoc
+    }
+  };
+</script>
+
+<style>
+  #app {
+    font-family: "Avenir", Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-align: center;
+    color: #2c3e50;
+    margin-top: 60px;
+    padding: 0 150px;
+  }
+</style>
 ```
 
-5. 编写 md 文件
+5. 启动项目或者重新运行
 
-```javascript
-var value = "vue.config.js";
-```
-
-6. main.js 全局安装组件引用样式
-
-```javascript
-var value = "vue.config.js";
-```
-
-7. app.vue helloworld 代码示例
-
-```javascript
-var value = "vue.config.js";
-```
-
-8. 效果展示
+![效果展示](../../assets/images/vue-02-01.png)
 
 :::
