--- a/src/notes/vue/01.md
+++ b/src/notes/vue/01.md
@@ -152,3 +152,11 @@ deploy:
 10. 构建在线演示和 npm 发布完成
 
 :::
+
+:::snippet 代码下载
+
+项目地址：[https://github.com/kitorv/kv-web-components](https://github.com/kitorv/kv-web-components)
+
+当前版本：[https://github.com/kitorv/kv-web-components/releases/tag/v0.1.0](https://github.com/kitorv/kv-web-components/releases/tag/v0.1.0)
+
+:::
