--- a/src/notes/javascript/14.md
+++ b/src/notes/javascript/14.md
@@ -16,9 +16,9 @@ var script = document.createElement("script");
 script.type = "text/javascript";
 var code = "function sayHi(){alert('hi');}";
 try {
-  script.appendChild(document.createTextNode("code"));
+  script.appendChild(document.createTextNode(code));
 } catch (ex) {
-  script.text = "code";
+  script.text = code;
 }
 document.body.appendChild(script);
 ```
