--- a/src/notes/javascript/19.md
+++ b/src/notes/javascript/19.md
@@ -1,6 +1,6 @@
 :::snippet 基本用法
 
-1. 使用 `<canvas>` 标签获取 2d 上下文绘制图形 `getContext("2d")`
+1. 使用 `<canvas>` 标签获取 2d 上下文绘制图形 `getContext("2d")` 。
 
 ```html
 <canvas id="drawing" width=" 200" height="200">A drawing of something.</canvas>
@@ -15,7 +15,7 @@ if (drawing.getContext) {
 }
 ```
 
-2. toDataURL()方法,导出在 `<canvas>` 元素上绘制的图像
+2. `toDataURL()` 方法,导出在 `<canvas>` 元素上绘制的图像。
 
 ```javascript
 var drawing = document.getElementById("drawing");
@@ -34,8 +34,8 @@ if (drawing.getContext) {
 
 :::snippet fillStyle 和 strokeStyle
 
-1. `fillStyle` 填充颜色可以使用 css 支持的颜色格式
-2. `strokeStyle` 描边颜色可以使用 css 支持的颜色格式
+1. `fillStyle` 填充颜色可以使用 css 支持的颜色格式。
+2. `strokeStyle` 描边颜色可以使用 css 支持的颜色格式。
 
 ```javascript
 var drawing = document.getElementById("drawing");
@@ -53,7 +53,7 @@ if (drawing.getContext) {
 
 :::snippet 绘制矩形
 
-1. fillRect(x,y,width,height) 在画布上绘制的矩形会填充指定的颜色
+1. `fillRect(x,y,width,height)` 在画布上绘制的矩形会填充指定的颜色。
 
 ```javascript
 var drawing = document.getElementById("drawing");
@@ -69,7 +69,7 @@ if (drawing.getContext) {
 }
 ```
 
-2. strokeRect(x,y,width,height) 方法在画布上绘制的矩形会使用指定的颜色描边
+2. `strokeRect(x,y,width,height)` 方法在画布上绘制的矩形会使用指定的颜色描边。
 
 ```javascript
 var drawing = document.getElementById("drawing");
@@ -85,7 +85,7 @@ if (drawing.getContext) {
 }
 ```
 
-3. clearRect(x,y,width,height) 方法用于清除画布上的矩形区域
+3. `clearRect(x,y,width,height)` 方法用于清除画布上的矩形区域。
 
 ```javascript
 var drawing = document.getElementById("drawing");
@@ -125,8 +125,8 @@ if (drawing.getContext) {
 
 :::snippet 绘制文本
 
-1. 通过 fillText() 和 strokeText() 绘制文本内容，参数：文本字符串、x 坐标、y 坐标、最大像素宽度
-2. 文本绘制属性
+1. 通过 `fillText()` 和 `strokeText()` 绘制文本内容，参数：文本字符串、x 坐标、y 坐标、最大像素宽度。
+2. 文本绘制属性。
 
 | 属性         | 描述                                                                                          |
 | :----------- | :-------------------------------------------------------------------------------------------- |
@@ -143,7 +143,7 @@ context.fillText("12", 100, 20);
 
 > textAlign 属性：建议使用"start"和"end"，不要使用"left"和"right"，因为前两者的意思更稳妥，能同时适合从左到右和从右到左显示(阅读)的语言。
 
-3. measureText()方法利用 font、textAlign 和 textBaseline 的当前值计算指定文本的大小
+3. `measureText()` 方法利用 `font` 、`textAlign` 和 `textBaseline` 的当前值计算指定文本的大小。
 
 ```javascript
 var fontSize = 100;
@@ -172,14 +172,14 @@ context.fillText("Font size is " + fontSize + "px", 10, 50);
 
 :::snippet 绘制图像
 
-drawImage() 绘制图像
+`drawImage()` 绘制图像。
 
 ```javascript
 var image = document.images[0];
 context.drawImage(image, 0, 10, 50, 50, 0, 100, 40, 60);
 ```
 
-> 图像来自其他域，调用 toDataURL()会抛出一个错误
+> 图像来自其他域，调用 `toDataURL()` 会抛出一个错误
 
 :::
 
@@ -211,20 +211,20 @@ context.fillRect(30, 30, 50, 50);
 
 :::snippet 渐变
 
-1. 创建 CanvasGradient 实例
+1. 创建 `CanvasGradient` 实例。
 
 ```javascript
 var gradient = context.createLinearGradient(30, 30, 70, 70);
 ```
 
-2. 设置颜色
+2. 设置颜色。
 
 ```javascript
 gradient.addColorStop(0, "white");
 gradient.addColorStop(1, "black");
 ```
 
-3. 绘制图形
+3. 绘制图形。
 
 ```javascript
 context.fillStyle = gradient;
@@ -235,7 +235,7 @@ context.fillRect(30, 30, 50, 50);
 
 :::snippet 模式
 
-模式：重复的图像，可以用来填充或描边图形
+模式：重复的图像，可以用来填充或描边图形。
 
 ```javascript
 var image = document.images[0],
@@ -249,7 +249,7 @@ context.fillRect(10, 10, 150, 150);
 
 :::snippet 图像数据
 
-获取图像的像素点颜色进行处理
+获取图像的像素点颜色进行处理。
 
 ```javascript
 var drawing = document.getElementById("drawing");
@@ -293,7 +293,7 @@ if (drawing.getContext) {
 
 :::snippet 合成
 
-1. globalAlpha 是一个介于 0 和 1 之间的值(包括 0 和 1)，用于指定所有绘制的透 明度。默认值为 0
+1. `globalAlpha` 是一个介于 0 和 1 之间的值(包括 0 和 1)，用于指定所有绘制的透 明度。默认值为 0。
 
 ```javascript
 //绘制红色矩形
@@ -308,7 +308,7 @@ context.fillRect(30, 30, 50, 50);
 context.globalAlpha = 0;
 ```
 
-2. globalCompositionOperation 表示后绘制的图形怎样与先绘制的图形结合
+2. `globalCompositionOperation` 表示后绘制的图形怎样与先绘制的图形结合。
 
 ```javascript
 //绘制红色矩形
