--- a/src/notes/javascript/18.md
+++ b/src/notes/javascript/18.md
@@ -1,6 +1,6 @@
 :::snippet 提交表单
 
-1. 通过 input 或者 button 标签提交表单
+1. 通过 `input` 或者 `button` 标签提交表单。
 
 ```html
 <!-- 通用提交按钮 -->
@@ -11,7 +11,7 @@
 <input type="image" src="graphic.gif" />
 ```
 
-2. 表单提交事件 submit 可以使用 preventDefault 阻止表单的提交
+2. 表单提交事件 `submit` 可以使用 `preventDefault` 阻止表单的提交。
 
 ```javascript
 var form = document.getElementById("myForm");
@@ -22,7 +22,7 @@ EventUtil.addHandler(form, "submit", function(event) {
 });
 ```
 
-3. 使用 submit() 方法提交表单
+3. 使用 `submit()` 方法提交表单。
 
 ```javascript
 var form = document.getElementById("myForm");
@@ -30,13 +30,13 @@ var form = document.getElementById("myForm");
 form.submit();
 ```
 
-> 调用 submit()方法不会触发 submit 事件
+> 调用 `submit()` 方法不会触发 `submit` 事件。
 
 :::
 
 :::snippet 重置表单
 
-1. 通过 input 或者 button 标签重置表单
+1. 通过 `input` 或者 `button` 标签重置表单。
 
 ```html
 <!-- 通用重置按钮 -->
@@ -45,7 +45,7 @@ form.submit();
 <button type="reset">Reset Form</button>
 ```
 
-2. 表单重置事件 reset 可以使用 preventDefault 阻止表单的重置
+2. 表单重置事件 `reset` 可以使用 `preventDefault` 阻止表单的重置。
 
 ```javascript
 var form = document.getElementById("myForm");
@@ -57,7 +57,7 @@ EventUtil.addHandler(form, "reset", function(event) {
 });
 ```
 
-3. 使用 reset() 方法提重置表单
+3. 使用 `reset()` 方法提重置表单。
 
 ```javascript
 var form = document.getElementById("myForm");
@@ -65,13 +65,13 @@ var form = document.getElementById("myForm");
 form.reset();
 ```
 
-> 调用 reset()方法不会触发 reset 事件
+> 调用 `reset()` 方法不会触发 `reset` 事件。
 
 :::
 
 :::snippet 重置字段
 
-1. 通过表单对象的 elements 获取表单的字段
+1. 通过表单对象的 `elements` 获取表单的字段。
 
 ```javascript
 var form = document.getElementById("form1");
@@ -83,7 +83,7 @@ var field2 = form.elements["textbox1"];
 var fieldCount = form.elements.length;
 ```
 
-2. 多个相同 name 的表单字段，通过 name 获取返回一个 NodeList
+2. 多个相同 `name` 的表单字段，通过 `name` 获取返回一个 `NodeList`。
 
 ```html
 <form method="post" id="myForm">
@@ -104,7 +104,7 @@ var firstFormField = form.elements[0];
 alert(firstColorField === firstFormField); //true
 ```
 
-> 通过 form.elements[0] 获取到的是单个的节点，通过 nanme 获取到可能是多个节点
+> 通过 `form.elements[0]` 获取到的是单个的节点，通过 `nanme` 获取到可能是多个节点。
 
 :::
 
@@ -113,7 +113,7 @@ alert(firstColorField === firstFormField); //true
 | 属性     | 描述                                          |
 | :------- | :-------------------------------------------- |
 | disabled | 布尔值，表示当前字段是否被禁用。              |
-| form     | 指向当前字段所属表单的指针;只读。             |
+| form     | 指向当前字段所属表单的指针只读。             |
 | name     | 当前字段的名称。                              |
 | readOnly | 布尔值，表示当前字段是否只读。                |
 | tabIndex | 表示当前字段的切换(tab)序号。                 |
@@ -148,15 +148,15 @@ EventUtil.addHandler(form, "submit", function(event) {
 });
 ```
 
-> select 标签单选多选 type 的值分别为 select-one、select-multiple
+> `select` 标签单选多选 `type` 的值分别为 `select-one`、`select-multiple`。
 
 :::
 
 :::snippet 表单字段共有方法
 
-1. 所有的表单字段都有 focus()和 blur()方法
-2. 表单字段 type=hidden 或者样式设置为 dispaly、visibility 不显示则第一个 input 获取焦点出错
-3. autofocus 页面加载完成当前节点获取焦点，不支持获取焦点则返回 false
+1. 所有的表单字段都有 `focus()` 和 `blur()`方法。
+2. 表单字段 `type=hidden` 或者样式设置为 `dispaly`、`visibility` 不显示则第一个 `input` 获取焦点出错。
+3. `autofocus` 页面加载完成当前节点获取焦点，不支持获取焦点则返回 `false`。
 
 ```html
 <input type="text" autofocus />
@@ -189,14 +189,14 @@ EventUtil.addHandler(window, "load", function(event) {
 
 :::snippet 文本框选择文本
 
-1. select() 方法选中文本框的文本，大多数浏览器(Opera 除外)都会默认获取焦点
+1. `select()` 方法选中文本框的文本，大多数浏览器(Opera 除外)都会默认获取焦点。
 
 ```javascript
 var textbox = document.forms[0].elements["textbox1"];
 textbox.select();
 ```
 
-2. select 事件，文本框选中文本触发
+2. `select` 事件，文本框选中文本触发。
 
 ```javascript
 var textbox = document.forms[0].elements["textbox1"];
@@ -205,7 +205,7 @@ EventUtil.addHandler(textbox, "select", function(event) {
 });
 ```
 
-2. 可以通过 selectionStart 和 selectionEnd 选中位置或者范围选中来取得选择的文本
+2. 可以通过 `selectionStart` 和 `selectionEnd` 选中位置或者范围选中来取得选择的文本。
 
 ```javascript
 function getSelectedText(textbox) {
@@ -221,7 +221,7 @@ function getSelectedText(textbox) {
 }
 ```
 
-3. 通过 setSelectionRange()方法或者范围选择来选择部分文本
+3. 通过 `setSelectionRange()` 方法或者范围选择来选择部分文本。
 
 ```javascript
 function selectText(textbox, startIndex, stopIndex) {
@@ -242,7 +242,7 @@ function selectText(textbox, startIndex, stopIndex) {
 
 :::snippet 过滤输入
 
-1. keypress 事件检测用户操作，String.fromCharCode() 转换输入字符进行判断过滤
+1. `keypress` 事件检测用户操作，`String.fromCharCode()` 转换输入字符进行判断过滤。
 
 ```javascript
 EventUtil.addHandler(textbox, "keypress", function(event) {
@@ -259,7 +259,7 @@ EventUtil.addHandler(textbox, "keypress", function(event) {
 });
 ```
 
-> 在 Firefox 中，所有由非字符键触发的 keypress 事件对应的字符编码为 0，
+> 在 Firefox 中，所有由非字符键触发的 `keypress` 事件对应的字符编码为 0，
 > 而在 Safari 3 以前的版本中，对应的字符编 码全部为 8。
 > 为了让代码更通用，只要不屏蔽那些字符编码小于 10 的键即可
 
@@ -278,9 +278,9 @@ EventUtil.addHandler(textbox, "keypress", function(event) {
 | beforepaste | 在发生粘贴操作前触发 |
 | paste       | 在发生粘贴操作时触发 |
 
-> 剪切板只有取消 copy、cut 和 paste 事件，才能阻止相应操作发生
+> 剪切板只有取消 copy、cut 和 paste 事件，才能阻止相应操作发生。
 
-2. 操作剪切板数据
+2. 操作剪切板数据。
 
 ```javascript
 var EventUtil = {
@@ -305,7 +305,7 @@ var EventUtil = {
 
 :::snippet HTML5 约束验证 API
 
-1. 必填字段
+1. 必填字段。
 
 ```html
 <input type="text" name="username" required />
@@ -318,7 +318,7 @@ var isUsernameRequired = document.forms[0].elements["username"].required;
 var isRequiredSupported = "required" in document.createElement("input");
 ```
 
-2. 其他输入类型
+2. 其他输入类型。
 
 ```html
 <input type="email" name="email" />
@@ -326,7 +326,7 @@ var isRequiredSupported = "required" in document.createElement("input");
 <input type="url" name="homepage" />
 ```
 
-3. 数值范围：`number`、`range`、`datetime`、`datetime-local`、`date`、`month`、`week`、`time`
+3. 数值范围：`number`、`range`、`datetime`、`datetime-local`、`date`、`month`、`week`、`time`。
 
 ```html
 <input type="number" min="0" max="100" step="5" name="count" />
@@ -340,13 +340,13 @@ input.stepDown();
 input.stepDown(10); //减10
 ```
 
-4. 输入模式：pattern 正在表达式匹配，默认表达式前后^和\$符号
+4. 输入模式：`pattern` 正在表达式匹配，默认表达式前后 `^` 和 `$` 符号。
 
 ```html
 <input type="text" pattern="\d+" name="count" />
 ```
 
-5. 检测有效性
+5. 检测有效性。
 
 ```javascript
 if (document.forms[0].elements[0].checkValidity()) {
@@ -364,7 +364,7 @@ if (document.forms[0].checkValidity()) {
 }
 ```
 
-6. validity 检测信息
+6. `validity` 检测信息。
 
 | 属性            | 描述                                                                                                                               |
 | :-------------- | :--------------------------------------------------------------------------------------------------------------------------------- |
@@ -390,7 +390,7 @@ if (input.validity && !input.validity.valid) {
 }
 ```
 
-7. 禁用验证：设置 novalidate 属性，可以告诉表单不进行验证
+7. 禁用验证：设置 `novalidate` 属性，可以告诉表单不进行验证。
 
 ```html
 <form method="post" action="signup.php" novalidate>
@@ -406,7 +406,7 @@ document.forms[0].noValidate = true; //禁用验证
 
 :::snippet 富文本编辑
 
-1. iframe 富文本编辑
+1. `iframe` 富文本编辑。
 
 ```html
 <!DOCTYPE html>
@@ -431,13 +431,13 @@ document.forms[0].noValidate = true; //禁用验证
 </script>
 ```
 
-2. contenteditable 富文本编辑
+2. `contenteditable` 富文本编辑。
 
 ```html
 <div class="editable" id="richedit" contenteditable></div>
 ```
 
-3. document.execCommand() 操作命令，[更多命令](https://developer.mozilla.org/zh-CN/docs/Web/API/Document/execCommand)
+3. `document.execCommand()` 操作命令，[更多命令](https://developer.mozilla.org/zh-CN/docs/Web/API/Document/execCommand)。
 
 ```javascript
 //转换粗体文本
@@ -452,7 +452,7 @@ frames["richedit"].document.execCommand(
 );
 ```
 
-4. 使用框架 iframe 可以 getSelection() 获取选中区域，调用对应的方法或者属性进行操作
+4. 使用框架 `iframe` 可以 `getSelection()` 获取选中区域，调用对应的方法或者属性进行操作。
 
 ```javascript
 var selection = frames["richedit"].getSelection();
